--- a/bip/mnemonic.html
+++ b/bip/mnemonic.html
@@ -118,8 +118,8 @@ pre{
 
 <script type="module">
 // ===== 依赖（ESM）=====
-import * as secp from 'https://esm.sh/@noble/secp256k1@1.7.1';
-import { ripemd160 } from 'https://esm.sh/@noble/hashes@1.4.0/ripemd160';
+import * as secp from 'https://esm.run/@noble/secp256k1@1.7.1';
+import { ripemd160 } from 'https://esm.run/@noble/hashes@1.4.0/ripemd160';
 
 // ===== 工具 =====
 function bytesToHex(u8){ let s=''; for (let i=0;i<u8.length;i++) s+=u8[i].toString(16).padStart(2,'0'); return s; }
